--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,10 +17,10 @@ jobs:
         image: postgres:14-alpine
         env:
           POSTGRES_USER: root
-          POSTGRES_PASSWORD: password
+          POSTGRES_PASSWORD: secret
           POSTGRES_DB: bank
         ports:
-          - 8081:5432
+          - 5433:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
