--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,5 +15,6 @@ services:
     environment:
      - DB_SOURCE=postgresql://root:secret@postgres:5432/bank?sslmode=disable
     depends_on:
-     - postgres  
+     - postgres 
+    entrypoint: [ "/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh" ] 
     command: [ "/app/main" ]
